--- a/myfish/src/app/features/map/map.component.html
+++ b/myfish/src/app/features/map/map.component.html
@@ -1,2 +1,14 @@
-<div #mapEl class="map"></div>
+<div #mapEl id="map" style="width:100%; height:100vh; position:relative;"></div>
+<button
+  pButton
+  type="button"
+  icon="pi pi-cog"
+  class="p-button-rounded"
+  (click)="overlayPanel.toggle($event)"
+  style="position:absolute; top:20px; left:20px; z-index:10000;"
+></button>
+<p-overlayPanel #overlayPanel>
+  <!-- Aici poți adăuga orice controale PrimeNG dorești -->
+  <button pButton type="button" label="Reset View" (click)="resetView()"></button>
+</p-overlayPanel>
 
