--- a/myfish/src/app/features/map/map.component.html
+++ b/myfish/src/app/features/map/map.component.html
@@ -8,7 +8,10 @@
   style="position:absolute; top:20px; left:20px; z-index:10000;"
 ></button>
 <p-overlayPanel #overlayPanel>
-  <!-- Aici poți adăuga orice controale PrimeNG dorești -->
-  <button pButton type="button" label="Reset View" (click)="resetView()"></button>
+  <div style="display: flex; flex-direction: column; gap: 0.2rem;">
+    <button pButton type="button" label="Romania" (click)="resetView()"></button>
+    <theme-switcher></theme-switcher>
+    <!-- Poți adăuga și alte controale aici -->
+  </div>
 </p-overlayPanel>
 
